# pp

./: .gitignore  .gitmodules  LICENSE  README.md  TrabalhoFinal.ipynb  oneAPI.ipynb  oneAPI.md
code/CUDA/: 01-hello-gpu.cu  02-thread-and-block-idx.cu  03-single-block-loop.cu  04-multi-block-loop.cu  05-double-elements.cu  06-mismatched-config-loop.cu  07-grid-stride-double.cu  08-add-error-handling.cu  09-vector-add.cu  CUDA.ipynb  CUDA_pt1.ipynb  CUDA_pt2.ipynb  CUDA_pt3.ipynb  main.cc
code/MPI/: compile.sh  launch.sh  ppd_mpi_1.ipynb  ppd_mpi_2.ipynb  ppd_mpi_3.ipynb  ppd_mpi_mult.ipynb  q  start_here.ipynb
code/OpenCL/: C_elem.cl  C_row.cl  C_row_priv.cl  C_row_priv_bloc.cl  OpenCL.ipynb  OpenCL_Py2.ipynb  OpenCL_Py3.ipynb  TutorialOpenCL.ipynb
code/OpenMP/: Makefile  intel_jupyter.ipynb  main.cpp  openMP_offload.ipynb  ppd.omp.sections.ipynb  ppd.omp.tasks.ipynb  ppd.omp.wshare.ipynb  ppd.openmp.ipynb
code/OpenMP/lab/: main_data_region.cpp  main_saxpy.cpp  main_saxpy_parallel.cpp
code/SYCL/: Makefile  README.md  RooflineSampling.ipynb  dct_roofline.html  main.cpp  mandel_roofline.html  oneAPI.ipynb  spmv_roofline.html
code/SYCL/DiscreteCosineTransform/: build_run.sh
code/SYCL/DiscreteCosineTransform/src/: CMakeLists.txt  DCT.cpp
code/SYCL/buffers/: main.cpp
code/SYCL/mandelbrot/: build_run.sh
code/SYCL/mandelbrot/src/: CMakeLists.txt
code/SYCL/matrix_multiply_advisor/: AdvisorTutorial.ipynb
code/SYCL/rooflining_advisor/: RooflineSampling.ipynb
code/SYCL/rooflining_advisor/DiscreteCosineTransform/src/: CMakeLists.txt
code/SYCL/usm/: Makefile  main.cpp
tutorials/: Vetorização_SSE_&_AVX.ipynb
